Tue Oct  5 02:35:47 1999  Owen Taylor  <otaylor@redhat.com>
 
 	* gnome-init.c (initialize_gtk_signal_relay): Free value
 	returned from gnome-config.
 
1999-10-05  Russell Steinthal  <rms39@columbia.edu>
	* gnome-dateedit.c (gnome_date_edit_get_date): Improve handling of
	invalid times: don't segfault when there is no colon in a time,
	default omitted trailing time fields (i.e. allow 8 for 8:00:00).
	Allow entry of seconds.

1999-10-03  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-dock.c (drag_floating): Realize, map and queue_resize the
	new child manually.

	* gnome-dock-band.c (gnome_dock_band_remove): Do
	`gtk_widget_unparent' on the removed widget instead of just
	NULLing the `parent' member.  This way refcounting on the
	GnomeDockBand children should be done right.  Many many thanks to
	Morten who detected there was a leak somewhere in the GnomeDock*
	widgets.  (And some curses to the author who had even put a
	`FIXME' comment in that code and forgot to correct it. ;-))

1999-09-30  Miguel de Icaza  <miguel@gnu.org>

	* gnome-icon-entry.c (show_icon_selection): Replace getcwd with
	g_get_current_dir here too.
	(show_icon_selection): ditto.

	* gnome-file-entry.c (gnome_file_entry_get_full_path): Use
	g_get_current_dir here. 

1999-09-28  Elliot Lee  <sopwith@redhat.com>
	* gnome-dock-item.c: If an item is really small, don't subtract
	  DRAG_HANDLE_SIZE from it to make its size < 0.

1999-09-28  Havoc Pennington  <hp@pobox.com>

	* gnome-init.c (gnome_segv_handle): Improve the "can't display
	error dialog" error message.

1999-09-27  Martin Baulig  <martin@home-of-linux.org>

	* gnome-mdi-session.c (gnome_mdi_save_state): Call
	gnome_config_sync () when we're done.

1999-09-26  Martin Baulig  <martin@home-of-linux.org>

	* gtkdial.c (gtk_dial_set_percentage, gtk_dial_set_value): Allow
 	you to set the upper limit as well (use <= instead of <).

1999-09-24  Morten Welinder  <terra@diku.dk>
